# SortingCollection

./: CMakeLists.txt  README.md
documents/: template.md
include/: RandomArray.h  mySort.hpp
src/: RandomArray.cc  main.cc
